# SimCARSv2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  batch_causal_discovery.sh  evaluate_performance.py
include/laudrup/lz4_stream/: lz4_stream.hpp
include/neargye/magic_enum/: magic_enum.hpp
src/agent/: agent_abstract.cpp  basic_driving_agent_agency_calculator.cpp  basic_driving_agent_controller.cpp  basic_driving_agent_state.cpp  basic_driving_scene_state.cpp  basic_driving_simulator.cpp  basic_fp_action_sampler.cpp  basic_goal_driving_agent_state.cpp  basic_read_only_driving_scene_state.cpp  driving_agent_abstract.cpp  driving_agent_agency_calculator_abstract.cpp  driving_agent_controller.cpp  driving_agent_reward_calculator_abstract.cpp  driving_agent_scene.cpp  driving_agent_simulator.cpp  driving_agent_state_abstract.cpp  driving_goal_extraction_agent.cpp  driving_goal_extraction_scene.cpp  driving_scene_abstract.cpp  driving_scene_state_abstract.cpp  driving_simulation_agent.cpp  driving_simulation_agent_abstract.cpp  driving_simulation_scene.cpp  driving_simulation_scene_abstract.cpp  driving_simulation_scene_factory.cpp  entity.cpp  goal_driving_agent_state.cpp  inattentive_simulated_agent.cpp  read_only_driving_agent_state_abstract.cpp  read_only_driving_scene_state_abstract.cpp  safe_speedy_driving_agent_reward_calculator.cpp  scene_abstract.cpp  simulated_agent_abstract.cpp  valueless_constant_abstract.cpp  valueless_variable_abstract.cpp  view_driving_agent_state.cpp  view_driving_scene_state.cpp  view_read_only_driving_agent_state.cpp
src/agent/csv/: csv_scene.cpp
src/agent/highd/: highd_driving_agent.cpp  highd_scene.cpp
src/agent/lyft/: lyft_agent.cpp  lyft_driving_agent.cpp  lyft_scene.cpp
src/agent/plg/: plg_driving_agent.cpp  plg_scene.cpp
src/agents/: action_intervention_fwd_car.cpp  action_intervention_ped.cpp  control_fwd_car.cpp  control_ped.cpp  default_fwd_car_outcome_sim.cpp  default_fwd_car_reward_calc.cpp  default_ped_outcome_sim.cpp  default_ped_reward_calc.cpp  full_control_fwd_car.cpp  full_control_fwd_car_sim.cpp  fwd_car.cpp  fwd_car_action_extractor.cpp  fwd_car_action_intervention.cpp  fwd_car_sim.cpp  goal_force_control_ped.cpp  goal_force_control_ped_sim.cpp  greedy_plan_fwd_car.cpp  greedy_plan_ped.cpp  motor_torque_control_fwd_car.cpp  ped.cpp  ped_action_extractor.cpp  ped_sim.cpp  plan_fwd_car.cpp  plan_ped.cpp  point_mass.cpp  point_mass_env.cpp  point_mass_sim.cpp  rect_rigid_body.cpp  rect_rigid_body_env.cpp  rect_rigid_body_sim.cpp  steer_control_fwd_car.cpp
src/agents/highd/: highd_fwd_car_scene.cpp
src/agents/otherd/: otherd_fwd_car_scene.cpp
src/agents/thor_magni/: thor_magni_ped_scene.cpp
src/causal/: necessary_fp_goal_causal_link_tester.cpp  variable_context.cpp
src/geometry/: o_rect.cpp  rect.cpp  tri.cpp  trig_buff.cpp
src/highd_action_explanation/: highd_action_explanation.cpp
src/highd_action_extraction/: highd_action_extraction.cpp
src/highd_alt_visualisation/: highd_alt_visualisation.cpp
src/highd_bulk_simulation_test/: highd_bulk_simulation_test.cpp
src/highd_intervention/: highd_intervention.cpp
src/highd_json_meta_action_explanation/: highd_json_meta_action_explanation.cpp
src/highd_json_meta_ate_test/: highd_json_meta_ate_test.cpp
src/highd_json_meta_bulk_simulation_test/: highd_json_meta_bulk_simulation_test.cpp
src/highd_json_meta_causal_discovery/: highd_json_meta_causal_discovery.cpp
src/highd_json_meta_link_test/: highd_json_meta_link_test.cpp
src/highd_json_meta_simcars_causal_discovery_demo/: highd_json_meta_simcars_causal_discovery_demo.cpp
src/highd_json_meta_simcars_intervention_demo/: highd_json_meta_simcars_intervention_demo.cpp
src/highd_json_meta_simulation_test/: highd_json_meta_simulation_test.cpp
src/highd_map_test/: highd_map_test.cpp
src/highd_scene_test/: highd_scene_test.cpp
src/highd_sim_visualisation/: highd_sim_visualisation.cpp
src/highd_simcars_demo/: highd_simcars_demo.cpp
src/highd_simulation_test/: highd_simulation_test.cpp
src/highd_visualisation/: highd_visualisation.cpp
src/laneletd_action_explanation/: laneletd_action_explanation.cpp
src/laneletd_action_extraction/: laneletd_action_extraction.cpp
src/laneletd_alt_visualisation/: laneletd_alt_visualisation.cpp
src/laneletd_intervention/: laneletd_intervention.cpp
src/laneletd_map_test/: laneletd_map_test.cpp
src/laneletd_sim_visualisation/: laneletd_sim_visualisation.cpp
src/laneletd_visualisation/: laneletd_visualisation.cpp
src/lyft_map_test/: lyft_map_test.cpp
src/lyft_qmap_scene_widget_test/: lyft_qmap_scene_widget_test.cpp
src/lyft_qscene_widget_test/: lyft_qscene_widget_test.cpp
src/lyft_scene_action_extraction/: lyft_scene_action_extraction.cpp
src/lyft_scene_test/: lyft_scene_test.cpp
src/lyft_simcars_demo/: lyft_simcars_demo.cpp
src/map/: driving_map_object_abstract.cpp  lane_abstract.cpp  lane_branch.cpp  map_grid_rect.cpp  map_object_abstract.cpp
src/map/highd/: highd_lane.cpp  highd_map.cpp
src/map/laneletd/: laneletd_lane.cpp  laneletd_map.cpp
src/map/lyft/: lyft_lane.cpp  lyft_map.cpp  lyft_traffic_light.cpp
src/map/plg/: plg_lane.cpp  (+1 more)
src/otherd_scene_test/: otherd_scene_test.cpp
src/plg_map_test/: plg_map_test.cpp
src/plg_qmap_scene_widget_test/: plg_qmap_scene_widget_test.cpp
src/plg_scene_test/: plg_scene_test.cpp
src/qmap_scene_widget_test/: qmap_scene_widget_test.cpp
src/qscene_widget_test/: qscene_widget_test.cpp
src/simcars_demo/: simcars_demo.cpp
src/structures/: sanity_check.cpp
src/temporal/: sanity_check.cpp
src/thor_magni_action_extraction/: thor_magni_action_extraction.cpp
src/thor_magni_scene_test/: thor_magni_scene_test.cpp
src/thor_magni_visualisation/: thor_magni_visualisation.cpp
src/trig_buff_test/: trig_buff_test.cpp
src/utils/: sanity_check.cpp
src/visualisation/: qagents_widget.cpp  qdriving_agents_widget.cpp  qdriving_map_agents_widget.cpp  qmap_agents_widget.cpp  qped_agents_widget.cpp  qped_map_agents_widget.cpp  qscene_widget.cpp  qsfml_canvas_abstract.cpp  utils.cpp
(+503 files in other folders)
